top 버튼 추가, 하단 고정메뉴 삭제

--- a/index.html
+++ b/index.html
@@ -161,14 +161,6 @@
             </address>
             <p>COPYRIGHT(C) 2016 MEGA COFFEE ALL RIGHTS RESERVED.</p>
         </div>
-        <div class="main_icon">
-            <ul>
-                <li><a href="#main"><img src="img/bottom_menu/main_yellow.png" alt="홈 아이콘"></a></li>
-                <li><a href="#sub1"><img src="img/bottom_menu/menu.png" alt="메뉴"></a></li>
-                <li><a href="#sub2"><img src="img/bottom_menu/brand.png" alt="브랜드"></a></li>
-                <li><a href="#sub3"><img src="img/bottom_menu/customer.png" alt="고객센터"></a></li>
-            </ul>
-        </div>
     </div>
     <!-- 첫번째 서브 페이지 -->
     <div data-role="page" id="sub1" class="sub1">
@@ -312,14 +304,7 @@
             </address>
             <p>COPYRIGHT(C) 2016 MEGA COFFEE ALL RIGHTS RESERVED.</p>
         </div>
-        <div class="main_icon">
-            <ul>
-                <li><a href="#main"><img src="img/bottom_menu/main.png" alt="홈 아이콘"></a></li>
-                <li><a href="#sub1"><img src="img/bottom_menu/menu_yellow.png" alt="메뉴"></a></li>
-                <li><a href="#sub2"><img src="img/bottom_menu/brand.png" alt="브랜드"></a></li>
-                <li><a href="#sub3"><img src="img/bottom_menu/customer.png" alt="고객센터"></a></li>
-            </ul>
-        </div>
+        
     </div>
     <!-- 두번째 서브 페이지 -->
     <div data-role="page" id="sub2" class="sub2">
@@ -479,14 +464,6 @@
             </address>
             <p>COPYRIGHT(C) 2016 MEGA COFFEE ALL RIGHTS RESERVED.</p>
         </div>
-        <div class="main_icon">
-            <ul>
-                <li><a href="#main"><img src="img/bottom_menu/main.png" alt="홈 아이콘"></a></li>
-                <li><a href="#sub1"><img src="img/bottom_menu/menu.png" alt="메뉴"></a></li>
-                <li><a href="#sub2"><img src="img/bottom_menu/brand_yellow.png" alt="브랜드"></a></li>
-                <li><a href="#sub3"><img src="img/bottom_menu/customer.png" alt="고객센터"></a></li>
-            </ul>
-        </div>
     </div>
     <!-- 세번째 서브 페이지 -->
     <div data-role="page" id="sub3" class="sub3">
@@ -585,14 +562,11 @@
             </address>
             <p>COPYRIGHT(C) 2016 MEGA COFFEE ALL RIGHTS RESERVED.</p>
         </div>
-        <div class="main_icon">
-            <ul>
-                <li><a href="#main"><img src="img/bottom_menu/main.png" alt="홈 아이콘"></a></li>
-                <li><a href="#sub1"><img src="img/bottom_menu/menu.png" alt="메뉴"></a></li>
-                <li><a href="#sub2"><img src="img/bottom_menu/brand.png" alt="브랜드"></a></li>
-                <li><a href="#sub3"><img src="img/bottom_menu/customer_yellow.png" alt="고객센터"></a></li>
-            </ul>
-        </div>
+    </div>
+    <div class="top">
+        <a href="#">
+            TOP
+        </a>
     </div>
 </body>
 </html>       
